--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -12,3 +12,16 @@
   font-size: 24px;
   padding-left: 5px;
 }
+
+.footer{
+  text-align: center;
+}
+
+.register{
+  float: right !important;
+}
+
+.ant-menu-horizontal > .ant-menu-item > a, .ant-menu-horizontal > .ant-menu-submenu > a
+{
+  display: inline-block !important;
+}
